k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: valuestream
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: valuestream-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    app: backend
